--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,5 @@
 .main-home-img {
-    background: url(https://media.istockphoto.com/photos/family-with-two-kids-moment-with-hugs-near-car-picture-id1269430514?b=1&k=20&m=1269430514&s=170667a&w=0&h=3TsaSLyIJrJ87V6v4Vv0GMFfarvGz-a842ty6ULDXzM=)
+    background: url(../assets/main.png)
     no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
